Add link to repo

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
   </head>
 
   <body>
-    <div id="curve_chart" style="height: calc(100vh - 1rem)"></div>
+    <div id="curve_chart" style="height: calc(100vh - 3rem)"></div>
+
+    GitHub: https://github.com/Ind3xOnGitHub/vrchat-world-tracking
   </body>
 </html>
