--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
   <body>
     <div id="curve_chart" style="height: calc(100vh - 3rem)"></div>
 
-    GitHub: <a href="https://github.com/Ind3xOnGitHub/vrchat-world-tracking">https://github.com/Ind3xOnGitHub/vrchat-world-tracking</a>
+    GitHub: <a href="https://github.com/Ind3xOnGitHub/vrchat-world-tracking" target="_blank" rel="noopener">https://github.com/Ind3xOnGitHub/vrchat-world-tracking</a>
   </body>
 </html>
