--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
               parseInt(splittedEntry[1]),
               parseInt(splittedEntry[2]),
               parseInt(splittedEntry[3]),
-              parseInt(splittedEntry[4])
+              parseInt(splittedEntry[4]),
+              parseInt(splittedEntry[5])
             ];
           });
 
@@ -38,6 +39,7 @@
             data.addColumn('number', 'Index\'s Home');
             data.addColumn('number', 'Club Galaxy');
             data.addColumn('number', 'Full Moon Party Beach Club');
+            data.addColumn('number', 'Void Club');
 
             data.addRows(entries);
 
