--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             data.addColumn('date', 'Date');
             data.addColumn('number', 'Sky Club');
-            data.addColumn('number', 'Index\'s Home');
+            data.addColumn('number', 'Ind3x\'s Home');
             data.addColumn('number', 'Club Galaxy');
             data.addColumn('number', 'Full Moon Party Beach Club');
             data.addColumn('number', 'Void Club');
