--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             const options = {
               chart: {
                 title: 'Occupants (updated every 5 minutes)',
-              }
+              },
+              explorer: {}
             };
 
             const chart = new google.charts.Line(document.getElementById('curve_chart'));
